# wasmtime_fs_demo

./: Cargo.toml  README.md  test.nu  wasi_ls.wasm
.cargo/: config.toml
src/: main.rs  wasi_fs.rs  wasi_linker_excluding_filesystem.rs  wasi_state.rs
wasi_ls/: Cargo.toml
wasi_ls/src/: main.rs
